--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,8 +9,7 @@ website:
       - href: index.qmd
         text: Home
       - about.qmd
-      - href: resume.qmd 
-      - text: Resume
+      - resume.qmd 
 
 format:
   html:
