--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,6 +4,9 @@ project:
 
 website:
   title: "Emily Mitchell"
+  page-footer:
+    left: "© 2025 Emily Mitchell"
+    right: "[My GitHub](https://github.com/emilymitchell8)"
   navbar:
     left:
       - href: index.qmd
